# tuneLZ

./: .gitignore  CMakeLists.txt  README.md  tuneLZ.cc
include/: BitReader.h  BitWriter.h  Bits.h  CodeWord.h  Decoder.h  Dictionary.h  DictionaryLimited.h  DictionarySized.h  Encoder.h  Symbol.h  helper.h
lib/CuTest/: CMakeLists.txt
runnable/: tuneLZ.h  tuneLZ_len.cc  tuneLZ_lim1024.cc  tuneLZ_lim128.cc  tuneLZ_lim256.cc  tuneLZ_lim512.cc  tuneLZ_lim64.cc  tuneLZ_size.cc  tuneLZ_size1024.cc  tuneLZ_size512.cc  tuneLZ_size64.cc  tuneLZ_unlim.cc
src/: BitReader.cc  BitWriter.cc  CodeWord.cc  Decoder.cc  Dictionary.cc  Encoder.cc  Symbol.cc
test/: BitReaderTest.cc  BitWriterTest.cc  CodeWordTest.cc  DecoderTest.cc  DictionaryLimitedTest.cc  DictionarySizedTest.cc  DictionaryTest.cc  EncoderTest.cc  OverallTest.cc  SymbolTest.cc  test.c
